# DynamicMap_Benchmark

./: .gitignore  .gitmodules  404.html  Dockerfile  LICENSE  README.md  index.html  mkdocs.yml
.github/workflows/: ci.yml  issue_stale.yaml
assets/view/: default.json
data/: index.html
data/creation/: index.html
docs/: data.md  evaluation.md  index.md  method.md  papers.md
docs/data/: creation.md  index.md
docs/evaluation/: index.md
docs/method/: dufomap.md  index.md
evaluation/: index.html
method/: index.html
method/dufomap/: index.html
methods/: README.md
papers/: index.html
scripts/: CMakeLists.txt  README.md
scripts/cpp/: create_rawmap.cpp  export_eval_pcd.cpp  extract_gtcloud.cpp  pcds_to_rosbag.cpp  timer.h
scripts/py/: requirements.txt
scripts/py/data/: extract_argoverse2.py  extract_diff_pose.py  extract_semkitti.py  play_data.py
scripts/py/eval/: evaluate_all.py
scripts/py/utils/: __init__.py  o3d_view.py  pcdpy3.py  semkitti_api.py
scripts/sh/: 0_run_methods_all.sh  1_export_eval_pcd.sh
search/: search_index.json
